<resources>
    <string name="app_name">PlantGlazing</string>
    <string name="testButton">Push me</string>
    <string name="introText">Welcome to Plant Glazing App</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--LoginActivity screen values-->
    <string name="lg_email">Email Address</string>
    <string name="lg_password">Password</string>
    <string name="lg_login">Login</string>
    <string name="lg_register">Register</string>
    <string name="lg_main">Please Login Below</string>
    <!--RegisterActivity screen values-->
    <string name="rg_fullname">Full Name</string>
    <string name="rg_password">Password</string>
    <string name="rg_email">Email Address</string>
    <string name="rg_confirmpass">Confirm Password</string>
    <string name="rg_submit">Submit</string>
    <string name="rg_login">Already have an account? Login here!</string>
    <string name="rg_main">Register An Account</string>
    <!--  Main activity screen values  -->
    <string name="main_info">Welcome to Plant Glazing</string>
    <string name="main_info2">Choose an option below!</string>
    <string name="lgoutBtn">Logout</string>
    <string name="enqBtn">Create Enquiry</string>
    <string name="main_websiteBtn">View Website</string>
    <!--  Enquiry screen values  -->
    <string name="btnLocation">Get Current Location</string>
    <string name="btnSubmitEnq">Submit Enquiry</string>
    <string name="btnGoBack">Main Menu</string>


</resources>
